# actus

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  dev.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/core/: config.py  realtime.py
backend/scripts/: bootstrap_langgraph_checkpointer.py
backend/tests/: safety_audit_test_helpers.py  test_a2a_tool.py  test_agent_service_graph_runtime.py  test_agent_service_model_routing.py  test_agent_service_request_queue.py  test_agent_service_stream_cursor_integration.py  test_agent_service_stream_polling.py  test_agent_service_wait_resume.py  test_agent_task_runner_input_envelope.py  test_agent_task_runner_run_engine_factory.py  test_agent_task_runner_storage.py  (+140 more)
frontend/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.test.json
sandbox/: .env.example  Dockerfile  pyproject.toml  requirements.txt  supervisord.conf
sandbox/app/interfaces/: service_dependencies.py
sandbox/app/interfaces/endpoints/: capabilities.py  routes.py  search.py  searxng.py  supervisor.py
sandbox/app/interfaces/errors/: exception_handler.py
sandbox/app/interfaces/schemas/: __init__.py  searxng.py
sandbox/app/models/: __init__.py  capabilities.py  searxng.py
sandbox/app/services/: __init__.py  bocha_search.py  capabilities.py  search_quality_policy.py  searxng.py
sandbox/searxng/: settings.yml
sandbox/tests/: test_bocha_search_service.py  test_capability_profile.py  test_searxng_endpoint.py  test_searxng_service.py
(+581 files in other folders)
