[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "readability-lxml>=0.8.4.1",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]
